do allow text wrapping in popup (needed because inside of commit "ensure no wrap between <label> text and <my-label-tooltips>")

--- a/app/public/app.css
+++ b/app/public/app.css
@@ -94,7 +94,9 @@ fieldset {
 .mytooltip-popup > span {
     display: inline-block;
     z-index: 99999999;
-    padding: 10px 14px 10px 19px;
+    padding: 14px 10px 14px 14px; 
+    white-space: normal;
+
     border-radius: 4px;
     box-shadow: 1px 1px 2px 0px #777;
 }
